css/styles.css
/* All your custom styles for this site go here */
body {
    font-family: 'Montserrat', sans-serif;
}
.page-wrapper {
    background-color: #D9D9D9;
}
.container.login {
    background-color: #FFFFFF;
    border-radius: 20px;
    padding: 45px 25px;
    width: calc(100% - 40px);
    max-width: 530px;
    box-shadow: 0 0 104px -40px rgba(0, 0, 0, 0.25);
}

.container.login h1 {
    font-size: 22px;
    text-align: center;
}

#cancel-container {
    height: 0;
    position: relative;
    top: -60px;
    right: -260px;
}

#cancel {
    background-color: white;
    width: 40px;
    height: 40px;
    border: none;
    border-radius: 50%;
    box-shadow: 0 0 3px 3px rgba(0, 0, 0, 0.25);
}

.graphic {
    position: absolute;
}

.footer-wave {
    bottom: 0;
    left: 0;
}

#dots-1 {
    left: 5%;
    top: 55%;
}

#dots-2 {
    right: 7%;
    top: 1%;
}

#wavy-lines-1 {
    top: 18%;
    left: 1%;
}

#wavy-lines-2 {
    top: 45%;
    right: 1%;
}


input {
    min-height: 55px;
    border: 1px solid #DDDFE1;
    padding: 0px 10px;
    font-family: inherit;
    font-size: 15px;
}

input::placeholder {
    color: #ABAFB3;
}

label.input-group {
    display: flex;
    flex-direction: column;
}

label.input-group span {
    font-size: 16px;
    font-weight: 600;
}

label.checkbox {
    display: flex;
    align-items: center;
    gap: 10px;
}

#forgot,
.checkbox,
label.checkbox span {
    font-size: 13px;
    font-weight: bold;
    color: #ABAFB3;
}

#register,
a.link {
    font-size: 13px;
    text-decoration: none;
    font-weight: bold;
    color: rgb(106, 68, 239);
}

button.btn {
    min-height: 55px;
    border: none;
    border-radius: 99px;
    background-color: #AA04F9;
    color: #FFFFFF;
    font-size: 18px;
    font-weight: 600;
    cursor: pointer;
}

button.btn.btn-login {
    align-self: center;
    flex: 0 1 auto;
    min-width: 250px;
}

